--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -6,7 +6,7 @@
   <a data-ng-click="setCurrency('USD')" data-ng-class="{active: currency.symbol == 'USD'}">USD</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('LTC')" data-ng-class="{active: currency.symbol == 'LTC'}">LTC</a>
+  <a data-ng-click="setCurrency('GRLC')" data-ng-class="{active: currency.symbol == 'GRLC'}">GRLC</a>
   </li>
   <li>
   <a data-ng-click="setCurrency('lites')" data-ng-class="{active: currency.symbol == 'lites'}">lites</a>
