--- a/public/views/index.html
+++ b/public/views/index.html
@@ -62,7 +62,7 @@
       <div class="col-xs-12 col-md-4 col-gray">
         <h2 translate>About</h2>
         <p translate><strong>Garlicore</strong> is a fork from <a href="https://insight.is/"
-          target="_blank">insight</a>, an open-source Garlicoin blockchain explorer with complete REST and websocket APIs that can be used for writing web wallets and other apps  that need more advanced blockchain queries than provided by garlicoind RPC.  Check out the <a href="https://github.com/bitpay/insight-ui" target="_blank">source code</a>.</p>
+          target="_blank">insight</a>, an open-source Bitcoin blockchain explorer that can be used for writing web wallets and other apps that need more advanced blockchain queries than provided by default.</p>
         <p translate><strong>Garlicore</strong> is sponsored by <a href="https://www.switchain.com/" target="_blank">Switchain</a>, a non-custodial exchange that helps you switch your garlicoin for other currencies.</p>
         <div id="powered" class="row">
           <div class="powered-text">
